@@ -7,14 +7,14 @@ import com.pantrypulse.historicalorder.mapper.HistoricalOrderMapper;
 import com.pantrypulse.historicalorder.repository.HistoricalOrderRepository;
 import com.pantrypulse.recipe.entity.Recipe;
 import com.pantrypulse.recipe.repository.RecipeRepository;
-import org.slf4j.Logger;
 import com.pantrypulse.authentication.entity.User;
 import com.pantrypulse.authentication.service.AuthenticatedUserService;
+
+import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class HistoricalOrderService {
@@ -25,6 +25,7 @@ public class HistoricalOrderService {
     private final HistoricalOrderRepository historicalOrderRepository;
     private final RecipeRepository recipeRepository;
     private final AuthenticatedUserService authenticatedUserService;
+
     public HistoricalOrderService(
             HistoricalOrderRepository historicalOrderRepository,
             RecipeRepository recipeRepository,
@@ -56,45 +57,53 @@ public class HistoricalOrderService {
 
         HistoricalOrder saved = historicalOrderRepository.save(order);
 
-        logger.info("Historical order created with ID {}", saved.getId());
+        logger.info(
+                "Historical order created with ID {}",
+                saved.getId()
+        );
 
         return HistoricalOrderMapper.toDto(saved);
     }
 
     public List<HistoricalOrderDto> getAllHistoricalOrders() {
 
-    	User currentUser = authenticatedUserService.getCurrentUser();
+        User currentUser =
+                authenticatedUserService.getCurrentUser();
 
-    	return historicalOrderRepository.findByOwner(currentUser)
-    	        .stream()
-    	        .map(HistoricalOrderMapper::toDto)
-    	        .collect(Collectors.toList());
+        return historicalOrderRepository
+                .findByOwner(currentUser)
+                .stream()
+                .map(HistoricalOrderMapper::toDto)
+                .toList();
     }
 
     public HistoricalOrderDto getHistoricalOrderById(Long id) {
 
-    	User currentUser = authenticatedUserService.getCurrentUser();
+        User currentUser =
+                authenticatedUserService.getCurrentUser();
 
-    	HistoricalOrder order =
-    	        historicalOrderRepository.findByIdAndOwner(id, currentUser)
-    	                .orElseThrow(() ->
-    	                        new ResourceNotFoundException(
-    	                                "Historical order not found"));
+        HistoricalOrder order =
+                historicalOrderRepository
+                        .findByIdAndOwner(id, currentUser)
+                        .orElseThrow(() ->
+                                new ResourceNotFoundException(
+                                        "Historical order not found"));
 
         return HistoricalOrderMapper.toDto(order);
     }
 
     public void deleteHistoricalOrder(Long id) {
 
-    	User currentUser = authenticatedUserService.getCurrentUser();
+        User currentUser =
+                authenticatedUserService.getCurrentUser();
 
-    	HistoricalOrder order =
-    	        historicalOrderRepository.findByIdAndOwner(id, currentUser)
-    	                .orElseThrow(() ->
-    	                        new ResourceNotFoundException(
-    	                                "Historical order not found"));
+        HistoricalOrder order =
+                historicalOrderRepository
+                        .findByIdAndOwner(id, currentUser)
+                        .orElseThrow(() ->
+                                new ResourceNotFoundException(
+                                        "Historical order not found"));
 
         historicalOrderRepository.delete(order);
     }
-
 }
